# toy_address_parser

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci_tests.yml
tests/: test_hello.py  test_parser.py
toy_address_parser/: __init__.py  __main__.py  app.py  exceptions.py  parser.py
